modules/cli/src/test/resources/good/misc/globals/gdo/Do04a.scr
module good.misc.globals.gdo.Do04a;


global protocol Do4a(role A, role B)
{
	choice at A
	{
		l1() from A to B;
	}
	or
	{
		do Do4_1(A, B);
		//do X: Do4_1(A as C, B as D);  // Uncomment is OK  // TODO
	}
}

global protocol Do4_1(role C, role D)
{
	do Do4_2(C, D);
}

global protocol Do4_2(role E, role F)
{
	//l1() from E to F;  // Uncomment OK for the X-do only, not the unscoped one
	l2() from E to F;
}

