modules/cli/src/test/resources/bad/safety/orphan/threeparty/Test03.scr
module bad.safety.orphan.threeparty.Test03;


global protocol Proto1(role A, role B, role C)
{
	// Wait-for + orphan error counterparts (arise together)
	choice at A
	{
		1() from A to B;
		1() from A to C;
		2() from B to C;
	}
	or
	{
		1() from A to B;
		1() from A to C;
		2() from C to B;
	}
}

